syntax = "proto3";
package usersProto;

// service definition

service UsersService {
  rpc findById (Empty) returns (Users) {};
}


message Users {
  int32 id = 1;
  string email = 2;
  string password = 3;
}
message Empty {}
